# 1bilhaodelinhasaovivo

./: .gitignore  README.md  etl_pandas.py  etl_python.py  pyproject.toml  using_duckb_to_save_parquet.py
dashboard/: meu_dasboard_correto.py  meu_dashbard_errado.py  meu_dashboard_correto.py  meu_dashboard_errado.py
data/: measurements_summary.parquet
