[tool.poetry]
name = "1bilhaodelinhasaovivo"
version = "0.1.0"
description = ""
authors = ["Gaocubo <ggg@gao3.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
